# biliassist

./: .env.example  .gitignore  API.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.md  build.bat  index.html  package-lock.json  package.json  start.bat  start.sh  vite.config.js
.codeartsdoer/rule/: 1.mdc  metadata.properties
.github/workflows/: pages.yml  release.yml
docs/: index.html  supabase-schema.sql
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_reply.rs  bilibili.rs  lib.rs  main.rs  storage.rs
src-tauri/src/auto_reply/: comment.rs  direct_message.rs  follow.rs  handler.rs  http.rs  mod.rs  models.rs  state.rs  wbi.rs
src/lib/: config.js  supabase.js
src/router/: index.js
src/stores/: auth.js
src/views/: AccountsView.vue  AuthPage.vue  AutoReplyView.vue  HomeView.vue  LoginView.vue  SponsorView.vue
tauri-app/: index.html  package-lock.json  package.json
