[package]
name = "bilibili-account-manager"
version = "0.2.6"
description = "Bilibili Account Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "bilibili_account_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "json", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
aes-gcm = "0.10"
rand = "0.8"
md-5 = "0.10"
